--- a/index.html
+++ b/index.html
@@ -1,32 +1,34 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <title>Finding Falcone</title>
-    <link rel="icon" type="image/png" href="pics/logo.svg">
-    <link rel="stylesheet" href="/css/homepage.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-</head>
+    <link rel="icon" type="image/png" href="pics/logo.svg" />
+    <link rel="stylesheet" href="css/homepage.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-<body>
+  <body>
     <div class="title-container">
-        <img src="pics/logo.svg" alt="Finding Falcone Logo" class="logo">
-        <h1 class="title">Finding Falcone</h1>
+      <img src="pics/logo.svg" alt="Finding Falcone Logo" class="logo" />
+      <h1 class="title">Finding Falcone</h1>
     </div>
 
-    <p class="story">After the recent war with neighbouring
-        planet Falicornia, King Shan has exiled the Queen of Falicornia
-        for 15 years. Queen Al Falcone is now in hiding.
-        King Shan has received intelligence that Al Falcone is in hiding in one of these 6 planets - DonLon, Enchai, Jebing, Sapir, Lerbin & Pingasor.
-        However he has limited resources at his disposal & can send his army to only 4 of these planets.</p>
+    <p class="story">
+      After the recent war with neighbouring planet Falicornia, King Shan has
+      exiled the Queen of Falicornia for 15 years. Queen Al Falcone is now in
+      hiding. King Shan has received intelligence that Al Falcone is in hiding
+      in one of these 6 planets - DonLon, Enchai, Jebing, Sapir, Lerbin &
+      Pingasor. However he has limited resources at his disposal & can send his
+      army to only 4 of these planets.
+    </p>
 
     <div class="button-container">
-        <a href="main.php"> <button class="play-button">Play</button>
-        </a>
+      <a href="main.php"> <button class="play-button">Play</button> </a>
     </div>
-
-</body>
-
+  </body>
 </html>
