--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </p>
 
     <div class="button-container">
-      <a href="main.php"> <button class="play-button">Play</button> </a>
+      <a href="main.html"> <button class="play-button">Play</button> </a>
     </div>
   </body>
 </html>
