--- a/main.html
+++ b/main.html
@@ -19,12 +19,12 @@
         <h3 class="header-title">Finding Falcone</h3>
 
         <div class="right-section">
-            <a href="main.php" class="reset-container">
+            <a href="main.html" class="reset-container">
                 <img src="pics/reset_logo.svg" alt="Reset Logo" class="reset-logo">
                 <p class="reset">Reset</p>
             </a>
 
-            <a href="index.php" class="home-container">
+            <a href="index.html" class="home-container">
                 <img src="pics/home_logo.svg" alt="Home Logo" class="home-logo">
                 <p class="reset">Home</p>
             </a>
