Fixed pages' responsiveness

--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <title>Finding Falcone</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/png" href="pics/logo.svg" />
-    <link rel="stylesheet" href="css/homepage.css" />
+    <link rel="stylesheet" href="css/index.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -27,8 +28,13 @@
       army to only 4 of these planets.
     </p>
 
+    <!-- <div class="button-container">
+        <a href="main.html"> <button class="play-button">Play</button>
+        </a>
+    </div> -->
+
     <div class="button-container">
-      <a href="main.html"> <button class="play-button">Play</button> </a>
+      <a href="main.html" class="play-button">Play</a>
     </div>
   </body>
 </html>
