--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Finding Falcone</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/png" href="pics/logo.svg">
     <link rel="stylesheet" href="css/main_page.css">
     <link rel="stylesheet" href="css/header.css">
